--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -87,8 +87,11 @@
       type="Helper">
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
-#<files>标签读取一个或多个文件.此标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
-<files motd="./motd.txt">
+#<files><execfiles>标签读取一个或多个文件.此标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
+<execfiles motd="curl https://ARKFUTURE.CN/ARKFUTURE/IRC/motd.txt"
+           opermotd="curl https://ARKFUTURE.CN/ARKFUTURE/IRC/opermotd.txt"
+           quotes="curl https://ARKFUTURE.CN/ARKFUTURE/IRC/quotes.txt"
+           rules="curl https://ARKFUTURE.CN/ARKFUTURE/IRC/rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
@@ -233,12 +236,10 @@
 <module name="nokicks">
 <module name="nonotice">
 <module name="opermotd">
-<execfiles opermotd="wget -O- https://arkfuture.cn/ARKFUTURE/IRC/operm.txt">
 <module name="password_hash">
 <mkpasswd operonly="no">
 <module name="redirect">
 <module name="randquote">
-<execfiles quotes="wget -O- https://arkfuture.cn/ARKFUTURE/IRC/quotes.txt">
 <randquote file="quotes"
            prefix=""
            suffix="">
@@ -248,7 +249,6 @@
 <module name="sha1">
 <module name="sha256">
 <module name="showfile">
-<execfiles rules="wget -O- https://arkfuture.cn/ARKFUTURE/IRC/rules.txt">
 <showfile name="RULES"
           file="rules"
           introtext="服务器规则:"
