--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -87,7 +87,7 @@
       type="Helper">
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
-#<files><execfiles>标签读取一个或多个文件.此标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
+#<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
 <execfiles motd="curl https://ARKFUTURE.CN/ARKFUTURE/IRC/motd.txt"
            opermotd="curl https://ARKFUTURE.CN/ARKFUTURE/IRC/opermotd.txt"
            quotes="curl https://ARKFUTURE.CN/ARKFUTURE/IRC/quotes.txt"
