--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -88,10 +88,10 @@
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
-<execfiles motd="wget -O - https://ARKFUTURE.CN/ARKFUTURE/IRC/motd.txt"
-           opermotd="wget -O - https://ARKFUTURE.CN/ARKFUTURE/IRC/opermotd.txt"
-           quotes="wget -O - https://ARKFUTURE.CN/ARKFUTURE/IRC/quotes.txt"
-           rules="wget -O - https://ARKFUTURE.CN/ARKFUTURE/IRC/rules.txt">
+<execfiles motd="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/motd.txt"
+           opermotd="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/opermotd.txt"
+           quotes="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/quotes.txt"
+           rules="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
