--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [1.1]
+# 配置文件迭代版本 [1.2]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -89,7 +89,7 @@
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
-<execfiles motd="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/motd.txt"
+<execfiles motd="motd.txt"
            opermotd="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/opermotd.txt"
            quotes="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/quotes.txt"
            rules="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/rules.txt">
