--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -89,10 +89,11 @@
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
-<execfiles motd="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/motd.txt"
-           opermotd="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/opermotd.txt"
-           quotes="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/quotes.txt"
-           rules="wget -O - http://ARKFUTURE.CN/ARKFUTURE/IRC/rules.txt">
+#部分命令如果没有权限就停止使用<execfiles>标签
+<files motd="motd.txt"
+       opermotd="opermotd.txt"
+       quotes="quotes.txt"
+       rules="rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
