--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -90,10 +90,10 @@
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
 #部分命令如果没有权限就停止使用<execfiles>标签
-<files motd="motd.txt"
-       opermotd="opermotd.txt"
-       quotes="quotes.txt"
-       rules="rules.txt">
+<files motd="/etc/inspircd/motd.txt"
+       opermotd="/etc/inspircd/opermotd.txt"
+       quotes="/etc/inspircd/quotes.txt"
+       rules="/etc/inspircd/rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
