--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [1.8]
+# 配置文件迭代版本 [1.9]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -277,3 +277,4 @@
 <module name="sasl">
 <sasl requiressl="no"
       target="localhost">
+<module name="autoop">
