--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [1.9]
+# 配置文件迭代版本 [2.0]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -199,12 +199,14 @@
 <module name="clearchan">
 <module name="cloaking">
 <cloak mode="full"
-       key="PO3ZF0hD2NA2CSpXquBdrZW1I4S152"
+       key="PO3ZF0hD2NA2CSpXquBdrZW1I4S1O3ZF52NA2CS"
        prefix="MyNet-"
        suffix=".IP"
        ignorecase="yes">
 <module name="clones">
 <module name="dccallow">
+<banfile action="allow"
+         pattern="*">
 <module name="ircv3">
 <ircv3 accountnotify="yes"
        awaynotify="yes"
