--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -200,8 +200,8 @@
 <module name="cloaking">
 <cloak mode="full"
        key="PO3ZF0hD2NA2CSpXquBdrZW1I4S1O3ZF52NA2CS"
-       prefix="MyNet-"
-       suffix=".IP"
+       prefix="AFL-"
+       suffix="-LFA"
        ignorecase="yes">
 <module name="clones">
 <module name="dccallow">
