--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [2.2]
+# 配置文件迭代版本 [2.3]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -200,8 +200,8 @@
 <module name="cloaking">
 <cloak mode="full"
        key="PO3ZF0hD2NA2CSpXquBdrZW1I4S1O3ZF52NA2CS"
-       prefix="AFL-"
-       suffix="-LFA"
+       prefix="AFE-"
+       suffix="-EFA"
        ignorecase="yes">
 <module name="clones">
 <module name="dccallow">
