--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -28,9 +28,11 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-# 这里我们监听 6667-6669
+# 为了安全，您可以在配置中使用更少量的端口
+# 这里我们根据标准只监听 6665-6669 的客户端
+# 6679/6697(常用)作为SSL
 <bind address=""
-      port="6667-6669"
+      port="6665-6669"
       type="clients"
       free="yes">
 
