--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [2.4]
+# 配置文件迭代版本 [2.5]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -30,7 +30,7 @@
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 # 为了安全，您可以在配置中使用更少量的端口
 # 这里我们根据标准只监听 6665-6669 的客户端
-# 6679/6697(常用)作为SSL
+# 6679/6697(常用)作为SSL的客户端连接
 <bind address=""
       port="6665-6669"
       type="clients"
