--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -29,7 +29,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 # 为了安全，您可以在配置中使用更少量的端口
-# 这里我们根据标准只监听 6667-6669 的客户端(IRC使用的服务器端口范围一般是6660-6669)
+# 这里我们只监听 6667-6669 的客户端(IRC使用的服务器端口范围一般是6660-6669)
 # 6679/6697(常用)作为SSL的客户端连接
 <bind address=""
       port="6667-6669"
