--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -9,7 +9,7 @@
 # 配置文件提供给 [INSPIRCDv3](此配置文件适配最新INSPIRCD)
 # 注意 ：nick为昵称，在IRC中您需要定义多个称呼(用户名和昵称)
 # 此配置文件中所有的密码均为随机生成，不作为固定密码使用
-# 配置文件基本使用TAB格式化，部分标签没对齐不影响使用
+# 配置文件基本使用标签格式化，部分标签没对齐不影响使用
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
@@ -91,7 +91,7 @@
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
-#部分命令如果没有权限就停止使用<execfiles>标签
+#部分命令如果没有权限就停止使用<files>标签
 <files motd="/etc/inspircd/motd.txt"
        opermotd="/etc/inspircd/opermotd.txt"
        quotes="/etc/inspircd/quotes.txt"
