--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -38,6 +38,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类，当用户连接到服务器时，可以将用户过滤到这个类中.此标记可以根据需要定义多次.
+#如果需要为私人的irc，可以设置密码，使用password字段  #测试
 <connect allow="*"
          timeout="60"
          threshold="20"
@@ -47,7 +48,8 @@
          recvq="8192"
          localmax="3"
          globalmax="3"
-         fakelag="yes">
+         fakelag="yes"
+         password="1406205488">
 
 #-#-#-#-#-#-#-#-#-#-#-#-操作员配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<class>标签定义了一组服务器操作员特权.此标记可以根据需要定义多次
