测试完毕，恢复并提交passwd解释

--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,15 +1,15 @@
-# 配置文件迭代版本 [2.7]
+# 配置文件迭代版本 [2.8]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
 # 以及官方的InspIRCd文档 https://docs.inspircd.org/
 #
-# 汉化配置文件由ARKFUTURE翻译，使用UTF-8编码
-# 添加部分说明，并完善主要功能，需要自行定制
+# 汉化配置文件由ARKFUTURE翻译,使用UTF-8编码
+# 添加部分说明,并完善主要功能,需要自行定制
 # 配置文件提供给 [INSPIRCDv3](此配置文件适配最新INSPIRCD)
-# 注意 ：nick为昵称，在IRC中您需要定义多个称呼(用户名和昵称)
-# 此配置文件中所有的密码均为随机生成，不作为固定密码使用
-# 配置文件基本使用标签格式化，部分标签没对齐不影响使用
+# 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
+# 此配置文件中所有的密码均为随机生成,不作为固定密码使用
+# 配置文件基本使用标签格式化,部分标签没对齐不影响使用
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
@@ -18,7 +18,7 @@
         description="ARKFUTURE irc"
         network="ARKFUTURE"
         id="1AF">
- # ARKFUTURE irc id从1AF开始，依次往后推到9AF;0AF作为特别id
+ # ARKFUTURE irc id从1AF开始,依次往后推到9AF;0AF作为特别id
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次. 
@@ -28,7 +28,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-# 为了安全，您可以在配置中使用更少量的端口
+# 为了安全,您可以在配置中使用更少量的端口
 # 这里我们只监听 6667-6669 的客户端(IRC使用的服务器端口范围一般是6660-6669)
 # 6679/6697(常用)作为SSL的客户端连接
 <bind address=""
@@ -37,8 +37,8 @@
       free="yes">
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<connect>标签定义了一个类，当用户连接到服务器时，可以将用户过滤到这个类中.此标记可以根据需要定义多次.
-#如果需要为私人的irc，可以设置密码，使用password字段  #测试
+#<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
+#如果需要为私人的irc,可以设置密码,使用password字段
 <connect allow="*"
          timeout="60"
          threshold="20"
@@ -48,8 +48,7 @@
          recvq="8192"
          localmax="3"
          globalmax="3"
-         fakelag="yes"
-         password="1406205488">
+         fakelag="yes">
 
 #-#-#-#-#-#-#-#-#-#-#-#-操作员配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<class>标签定义了一组服务器操作员特权.此标记可以根据需要定义多次
@@ -92,7 +91,7 @@
       type="Helper">
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
-#<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意，文件只在缓存器上读取，因此不会自动检测更改.
+#<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
 #部分命令如果没有权限就停止使用<files>标签
 <files motd="/etc/inspircd/motd.txt"
        opermotd="/etc/inspircd/opermotd.txt"
@@ -123,7 +122,7 @@
          pingwarning="15"
          splitwhois="splitmsg"
          exemptchanops=""
-         xlinemessage="您被禁止，请联系管理员获取帮助"
+         xlinemessage="您被禁止,请联系管理员获取帮助"
          nosnoticestack="yes">
 
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
