--- a/ARKFUTURE/MPD/mpd.conf
+++ b/ARKFUTURE/MPD/mpd.conf
@@ -158,21 +158,22 @@ zeroconf_enabled		"yes"
 # 此设置的参数将是的Zeroconf/Avahi唯一名称
 # 网络上的此MPD服务器。%h将替换为主机名.
 #
-zeroconf_name			"ARKFUTURE Music Player @ %h"
+zeroconf_name			"ARKFUTURE MPD Server @ %h"
 #
 ###############################################################################
 
 
 # 权限#################################################################
 #
-# 如果设置了此设置，MPD将需要密码授权. The password
-# setting can be specified multiple times for different password profiles.
+# 如果设置了此设置，MPD将需要密码授权. 
+# 可以为不同的密码配置文件多次指定设置
 #
-#password                        "password@read,add,control,admin"
+#password                        "password@read,add,control,admin"(此处不知道为什么)
+password                        "1234567890"
 #
 # This setting specifies the permissions a user has who has not yet logged in.
 #
-#default_permissions             "read,add,control,admin"
+default_permissions             "read,add,control,admin"
 #
 ###############################################################################
 
