--- a/ARKFUTURE/MPD/mpd.conf
+++ b/ARKFUTURE/MPD/mpd.conf
@@ -168,8 +168,7 @@ zeroconf_name			"ARKFUTURE MPD Server @ %h"
 # 如果设置了此设置，MPD将需要密码授权. 
 # 可以为不同的密码配置文件多次指定设置
 #
-#password                        "password@read,add,control,admin"(此处不知道为什么)
-password                        "1234567890"
+password                        "123456789@read,add,control,admin"
 #
 # This setting specifies the permissions a user has who has not yet logged in.
 #
