--- a/ARKFUTURE/MPD/mpd.conf
+++ b/ARKFUTURE/MPD/mpd.conf
@@ -128,7 +128,7 @@ auto_update	"yes"
 # 限制正在监视的目录的深度, 0表示仅监视音乐目录本身
 # 
 #
-auto_update_depth "0"
+#auto_update_depth "0"
 #
 ###############################################################################
 
