--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -14,7 +14,8 @@
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
 # network 的值应该在忘了上所有的服务器上都应该相同
-<server name=""
+# name 项必须填
+<server name="arkfuture.cn"
         description="ARKFUTURE irc"
         network="ARKFUTURE"
         id="1AF">
