--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -15,7 +15,7 @@
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
 # network 的值应该在忘了上所有的服务器上都应该相同
 # name 项必须填
-<server name="arkfuture.cn"
+<server name="IRC.ARKFUTURE.CN"
         description="ARKFUTURE irc"
         network="ARKFUTURE"
         id="1AF">
