--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [3.0]
+# 配置文件迭代版本 [3.5]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -288,3 +288,5 @@
 <sasl requiressl="no"
       target="localhost">
 <module name="autoop">
+<module name="sslmodes">
+<module name="starttls">
