--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -288,5 +288,6 @@
 <sasl requiressl="no"
       target="localhost">
 <module name="autoop">
+<knock notify="notice">
 <module name="sslmodes">
 <module name="starttls">
