--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [3.5]
+# 配置文件迭代版本 [3.7]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -289,5 +289,11 @@
       target="localhost">
 <module name="autoop">
 <knock notify="notice">
+<module name="inviteexception">
+<inviteexception bypasskey="yes">
+<module name="helpop">
+<helpmsg nohelp="您搜索的主题没有任何帮助。请再试一次。">
+<module name="geoclass">
+<module name="exemptchanops">
 <module name="sslmodes">
 <module name="starttls">
