--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -293,6 +293,9 @@
 <inviteexception bypasskey="yes">
 <module name="helpop">
 <helpmsg nohelp="您搜索的主题没有任何帮助。请再试一次。">
+<helpop key="help"
+        title="帮助"
+        value="请私聊AFEBOT">
 <module name="geoclass">
 <module name="exemptchanops">
 <module name="sslmodes">
