--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -288,6 +288,7 @@
 <sasl requiressl="no"
       target="localhost">
 <module name="autoop">
+<module name="knock">
 <knock notify="notice">
 <module name="inviteexception">
 <inviteexception bypasskey="yes">
@@ -301,3 +302,34 @@
 <module name="sslmodes">
 <module name="starttls">
 <module name="sslinfo">
+<module name="operprefix">
+<operprefix prefix="!">
+<module name="ojoin">
+<ojoin notice="yes"
+       op="yes"
+       prefix="!">
+<module name="customprefix">
+<module name="conn_umodes">
+<module name="conn_join">
+<module name="cycle">
+<module name="globops">
+<module name="inviteexception">
+<module name="namedmodes">
+<module name="muteban">
+<module name="nicklock">
+<module name="remove">
+<module name="rline">
+<module name="sakick">
+<module name="sapart">
+<module name="satopic">
+<module name="seenicks">
+<module name="cgiirc">
+<module name="chanlog">
+<module name="chancreate">
+<module name="cban">
+# HTTPD
+<module name="httpd">
+<bind address=""
+      port="8080"
+      type="httpd">
+<httpd timeout="10s">
