--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -324,3 +324,10 @@
 <module name="chanlog">
 <module name="chancreate">
 <module name="cban">
+# HTTPD
+<module name="httpd">
+<httpd timeout="10s">
+<bind address="127.0.0.1"
+      port="8080"
+      path="./"
+      type="httpd">
