--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [4.0]
+# 配置文件迭代版本 [4.3]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -191,6 +191,7 @@
 # 我们使用:导入MOD后立即跟MOD配置文件 的方式配置
 # 示例:
 # <module name="模块名">
+# <module name="globalload"> 管理员重载/卸载模块的模块,非必要不装
 
 <module name="alltime">
 <module name="blockcolor">
@@ -324,6 +325,57 @@
 <module name="chanlog">
 <module name="chancreate">
 <module name="cban">
+# 以下为新加的调目
+<module name="abbreviation">
+<module name="alias">
+<module name="allowinvite">
+<module name="anticaps">
+<module name="auditorium">
+<module name="banexception">
+<module name="banredirect">
+<module name="bcrypt">
+<module name="filter">
+<module name="chanfilter">
+<module name="codepage">
+<module name="commonchans">
+<module name="conn_waitpong">
+<module name="connectban">
+<module name="connflood">
+<module name="customtitle">
+<module name="denychans">
+<module name="disable">
+<module name="dnsbl">
+<module name="geoclass">
+<module name="geoban">
+<module name="haproxy">
+<module name="ident">
+<module name="override">
+<module name="passforward">
+<module name="pbkdf2">
+<module name="permchannels">
+<permchannels channel="#arkfuture"
+              modes=""
+              topic="Welcome to ARKFUTURE|欢迎加入ARKFUTURE"
+              topicsetby="ARKFUTURE"
+              topicts="956188800"
+              ts="726192000">
+<module name="serverban">
+<module name="sethost">
+<module name="setidle">
+<module name="setname">
+<module name="showwhois">
+<module name="silence">
+<module name="vhost">
+<module name="userip">
+<module name="watch">
+<module name="websocket">
+<module name="xline_db">
+# <module name="topiclock">
+# 数据库(可能未配置前报错)
+<module name="ldapauth">
+<module name="ldapoper">
+<module name="sqlauth">
+<module name="sqloper">
 # HTTPD
 <module name="httpd">
 <httpd timeout="10s">
