--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -369,7 +369,7 @@
 <module name="userip">
 <module name="watch">
 <module name="websocket">
-# <module name="topiclock">
+<module name="topiclock">
 # 数据库(可能未配置前报错)
 <module name="ldapauth">
 <module name="ldapoper">
