--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -6,7 +6,7 @@
 #
 # 汉化配置文件由ARKFUTURE翻译,使用UTF-8编码
 # 添加部分说明,并完善主要功能,需要自行定制
-# 配置文件提供给 [INSPIRCDv3](此配置文件适配最新INSPIRCD)
+# 配置文件提供给 最新版本INSPIRCD
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用
 # 配置文件基本使用标签格式化,部分标签没对齐不影响使用
