--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [4.5]
+# 配置文件迭代版本 [4.7]
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -325,7 +325,6 @@
 <module name="chanlog">
 <module name="chancreate">
 <module name="cban">
-# 以下为新加的调目
 <module name="abbreviation">
 <module name="alias">
 <module name="allowinvite">
@@ -356,8 +355,8 @@
               modes=""
               topic="Welcome to ARKFUTURE|欢迎加入ARKFUTURE"
               topicsetby="ARKFUTURE"
-              topicts="956188800"
-              ts="726192000">
+              topicts="1706788800"
+              ts="1706788800">
 <module name="serverban">
 <module name="sethost">
 <module name="setidle">
@@ -369,16 +368,16 @@
 <module name="watch">
 <module name="websocket">
 <module name="topiclock">
-# 数据库(可能未配置前报错)
-<module name="ldapauth">
-<module name="ldapoper">
-<module name="sqlauth">
-<module name="sqloper">
-<module name="xline_db">
 # HTTPD
 <module name="httpd">
 <httpd timeout="10s">
 <bind address="127.0.0.1"
       port="8080"
-      path="./"
+      path="/var/www/html/"
       type="httpd">
+# 数据库(使用哪个删除哪个注释)
+#<module name="ldapauth">
+#<module name="ldapoper">
+#<module name="sqlauth">
+#<module name="sqloper">
+#<module name="xline_db">
