--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -377,7 +377,7 @@
 # HTTPD
 <module name="httpd">
 <httpd timeout="10s">
-<bind address="127.0.0.1"
+<bind address=""
       port="8080"
       path="/var/www/html/"
       type="httpd">
