--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -378,5 +378,5 @@
 <module name="httpd">
 <bind address=""
       port="1314"
-      path="/var/www/html/"
+      document_root="/var/www/html/"
       type="httpd">
