--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,5 @@
-# 配置文件迭代版本 [5.6]
+# 配置文件迭代版本 [6.0]
+# 配置文件版本为 :正式版(调试完成)，提供给INSPIRCD3.17.0+
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
 # 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -6,7 +7,6 @@
 #
 # 汉化配置文件由ARKFUTURE翻译,使用UTF-8编码
 # 添加部分说明,并完善主要功能,需要自行定制
-# 配置文件提供给 最新版本INSPIRCD
 # 注意 ：nick为昵称,在IRC中您需要定义多个称呼(用户名和昵称)
 # 此配置文件中所有的密码均为随机生成,不作为固定密码使用
 # 配置文件基本使用标签格式化,部分标签没对齐不影响使用
@@ -374,9 +374,3 @@
 <module name="userip">
 <module name="watch">
 <module name="topiclock">
-# HTTPD
-<module name="httpd">
-<bind address=""
-      port="1314"
-      document_root="/var/www/html/"
-      type="httpd">
