--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -198,6 +198,9 @@
 # <module name="sqlauth">
 # <module name="sqloper">
 # <module name="xline_db">
+#<module name="sasl">
+#<sasl requiressl="no"
+#      target="services.example.com">
 
 
 <module name="alltime">
