--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [6.0]
+# 配置文件迭代版本 [6.1]
 # 配置文件版本为 :正式版(调试完成)，提供给INSPIRCD3.17.0+
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
@@ -319,6 +319,8 @@
 <module name="customprefix">
 <module name="conn_umodes">
 <module name="conn_join">
+#<autojoin channel="#arkfuture"
+#          delay="10s">
 <module name="cycle">
 <module name="globops">
 <module name="inviteexception">
@@ -377,3 +379,4 @@
 <module name="userip">
 <module name="watch">
 <module name="topiclock">
+<module name="sajoin">
