--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [6.1]
+# 配置文件迭代版本 [6.2]
 # 配置文件版本为 :正式版(调试完成)，提供给INSPIRCD3.17.0+
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
@@ -198,11 +198,10 @@
 # <module name="sqlauth">
 # <module name="sqloper">
 # <module name="xline_db">
-#<module name="sasl">
-#<sasl requiressl="no"
-#      target="services.example.com">
+# <sasl requiressl="no"
+#       target="services.example.com">
 
-
+<module name="sasl">
 <module name="alltime">
 <module name="blockcolor">
 <module name="botmode">
@@ -319,8 +318,8 @@
 <module name="customprefix">
 <module name="conn_umodes">
 <module name="conn_join">
-#<autojoin channel="#arkfuture"
-#          delay="10s">
+<autojoin channel="#arkfuture"
+          delay="10s">
 <module name="cycle">
 <module name="globops">
 <module name="inviteexception">
@@ -365,7 +364,7 @@
 <module name="permchannels">
 <permchannels channel="#arkfuture"
               modes=""
-              topic="Welcome to ARKFUTURE|欢迎加入ARKFUTURE"
+              topic="Welcome to ARKFUTURE|欢迎加入ARKFUTURE|这个是中转频道,默认自动加入"
               topicsetby="ARKFUTURE"
               topicts="1706788800"
               ts="1706788800">
