--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -40,16 +40,27 @@
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
 #如果需要为私人的irc,可以设置密码,使用password字段
-<connect allow="*"
-         timeout="60"
-         threshold="20"
-         pingfreq="120"
-         hardsendq="262144"
-         softsendq="8192"
-         recvq="8192"
-         localmax="3"
+<connect name="Main"
+         allow="*"
+         commandrate="1000"
+         fakelag="yes"
          globalmax="3"
-         fakelag="yes">
+         hardsendq="262144"
+         limit="5000"
+         localmax="3"
+         maxchans="30"
+         maxconnwarn="no"
+         pingfreq="2m"
+         recvq="8K"
+         resolvehostnames="yes"
+         softsendq="8192"
+         threshold="20"
+         timeout="60"
+         uniqueusername="no">
+<connect name="Secure"
+         parent="Main"
+         allow="*"
+         port="6697">
 
 #-#-#-#-#-#-#-#-#-#-#-#-操作员配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<class>标签定义了一组服务器操作员特权.此标记可以根据需要定义多次
@@ -81,15 +92,18 @@
 <oper name="arkfuturenetadmin"
       password="P03iZjRtmpqXPv3"
       host="*@*"
-      type="NetAdmin">
+      type="NetAdmin"
+      vhost="iadm.arkfuture.cn">
 <oper name="arkfutureglobalop"
       password="P03iZjRtmpqXPv3"
       host="*@*"
-      type="GlobalOp">
+      type="GlobalOp"
+      vhost="igop.arkfuture.cn">
 <oper name="arkfuturehelper"
       password="P03iZjRtmpqXPv3"
       host="*@*"
-      type="Helper">
+      type="Helper"
+      vhost="ihep.arkfuture.cn">
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
@@ -188,9 +202,11 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#MOD(模组)#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/3/modules/
+# 其他模块配置请自行修改使用
 # 我们使用:导入MOD后立即跟MOD配置文件 的方式配置
 # 示例:
 # <module name="模块名">
+# 模块配置
 
 # <module name="globalload"> 管理员重载/卸载模块的模块,非必要不装
 # <module name="ldapauth">
@@ -379,3 +395,6 @@
 <module name="watch">
 <module name="topiclock">
 <module name="sajoin">
+<module name="operlevels">
+<module name="opermodes">
+<module name="swhois">
