--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -142,18 +142,28 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
-<security hideserver=""
-          userstats="Pu"
+#此配置参照(基于)官方文档修改,可自行修改
+<security allowcoreunload="no"
+          announceinvites="dynamic"
           customversion=""
+          genericoper="no"
+          hidebans="yes"
+          hidekills=""
+          hideserver=""
+          hideulinekills="yes"
+          maxtargets="20"
+          restrictbannedusers="yes"
+          runasgroup=""
+          runasuser=""
           flatlinks="no"
           hidesplits="no"
           hideulines="no"
-          hidebans="no"
-          maxtargets="20">
+          userstats="Pu">
 
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
 #<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
-<performance quietbursts="yes"
+<performance clonesonconnect="yes"
+             quietbursts="yes"
              softlimit="15000"
              somaxconn="128"
              netbuffersize="10240">
