--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [6.5]
+# 配置文件迭代版本 [6.7]
 # 配置文件版本为 :正式版(调试完成)，提供给INSPIRCD3.17.0+
 # 这只是一个或多或少可以使用的配置文件示例
 # 请根据您的需要进行定制！
@@ -85,12 +85,12 @@
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
 # 这里必要的话请限制登录主机 "host" 字段
-<oper name="arkfuturenetadmin"
+<oper name="arkfutureadmin"
       password="P03iZjRtmpqXPv3"
       host="*@*"
       type="NetAdmin"
       vhost="iadm.arkfuture.cn">
-<oper name="arkfutureglobalop"
+<oper name="arkfutureop"
       password="P03iZjRtmpqXPv3"
       host="*@*"
       type="GlobalOp"
@@ -220,8 +220,6 @@
 # <module name="sqlauth">
 # <module name="sqloper">
 # <module name="xline_db">
-# <sasl requiressl="no"
-#       target="services.example.com">
 
 <module name="sasl">
 <module name="alltime">
