--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -149,7 +149,7 @@
           genericoper="no"
           hidebans="yes"
           hidekills=""
-          hideserver=""
+          hideserver="ARKFUTUREirc"
           hideulinekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
