--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,9 +1,10 @@
 # 配置文件迭代版本 [6.7]
-# 配置文件版本为 :正式版(调试完成)，提供给INSPIRCD3.17.0+
-# 这只是一个或多或少可以使用的配置文件示例
-# 请根据您的需要进行定制！
-# 再次：请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
+# 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTUREirc使用
+# 
+# 您可以在以下文档中查询详细配置来完善此配置
+# 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
 # 以及官方的InspIRCd文档 https://docs.inspircd.org/
+# 进行详细配置
 #
 # 汉化配置文件由ARKFUTURE翻译,使用UTF-8编码
 # 添加部分说明,并完善主要功能,需要自行定制
@@ -14,7 +15,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<server>标签定义了本地服务器的设置.此标记只能定义一次.
 # network 的值应该在忘了上所有的服务器上都应该相同
-# name 项必须填
+
 <server name=""
         description="ARKFUTURE irc"
         network="ARKFUTURE"
