--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -86,6 +86,7 @@
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
 # 这里必要的话请限制登录主机 "host" 字段
+# NetAdmin：服务器管理；GlobalOp：服务器操作员；Helper：帮助员
 <oper name="arkfutureadmin"
       password="P03iZjRtmpqXPv3"
       host="*@*"
@@ -140,14 +141,15 @@
          splitwhois="splitmsg"
          exemptchanops=""
          xlinemessage="您被禁止,请联系管理员获取帮助"
-         nosnoticestack="yes">
+         nosnoticestack="yes"
+         defaultbind="auto">
 
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
 #此配置参照(基于)官方文档修改,可自行修改
 <security allowcoreunload="no"
           announceinvites="dynamic"
-          customversion=""
+          customversion="ARKFUTURE-irc-v1"
           genericoper="no"
           hidebans="yes"
           hidekills=""
@@ -160,7 +162,8 @@
           flatlinks="no"
           hidesplits="no"
           hideulines="no"
-          userstats="Pu">
+          userstats="Pu"
+          maphide="https://arkfuture.cn">
 
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
 #<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
@@ -226,9 +229,11 @@
 <module name="sasl">
 <module name="alltime">
 <module name="blockcolor">
+<module name="blockamsg">
 <module name="botmode">
 <botmode forcenotice="no">
 <module name="cap">
+<module name="callerid">
 <module name="chancreate">
 <module name="chanhistory">
 <chanhistory bots="yes"
@@ -277,7 +282,9 @@
 <module name="monitor">
 <monitor maxentries="32">
 <module name="namesx">
+<module name="noctcp">
 <module name="nokicks">
+<module name="nonicks">
 <module name="nonotice">
 <module name="opermotd">
 <module name="password_hash">
@@ -296,7 +303,7 @@
 <showfile name="RULES"
           file="rules"
           introtext="服务器规则:"
-          endtext="结束服务器规则.">
+          endtext="服务器规则结束.">
 <module name="stripcolor">
 <module name="uhnames">
 <module name="watch">
@@ -328,7 +335,7 @@
 <helpmsg nohelp="您搜索的主题没有任何帮助。请再试一次。">
 <helpop key="help"
         title="帮助"
-        value="请私聊AFEBOT">
+        value="Please go to http://arkfuture.cn">
 <module name="geoclass">
 <module name="exemptchanops">
 <module name="sslmodes">
@@ -352,6 +359,7 @@
 <module name="rline">
 <module name="sakick">
 <module name="sapart">
+<module name="samode">
 <module name="satopic">
 <module name="seenicks">
 <module name="cgiirc">
@@ -404,3 +412,23 @@
 <module name="operlevels">
 <module name="opermodes">
 <module name="swhois">
+<module name="tline">
+<module name="timedbans">
+<module name="shun">
+<module name="svshold">
+<module name="securelist">
+<module name="operjoin">
+<operjoin channel="#OP_OP"
+          override="yes">
+<module name="nopartmsg">
+<module name="nationalchars">
+<module name="codepage">
+<module name="mlock">
+<module name="hostchange">
+<module name="hidemode">
+<module name="hidelist">
+<module name="gecosban">
+<module name="chgident">
+<module name="chgname">
+<module name="classban">
+<module name="channames">
