--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -394,7 +394,7 @@
 <module name="permchannels">
 <permchannels channel="#arkfuture"
               modes=""
-              topic="Welcome to ARKFUTURE|欢迎加入ARKFUTURE|这个是中转频道,默认自动加入"
+              topic="Welcome to ARKFUTURE|欢迎加入ARKFUTURE|这个是中转频道,默认自动加入|请访问http://arkfuture.cn"
               topicsetby="ARKFUTURE"
               topicts="1706788800"
               ts="1706788800">
