--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -225,6 +225,7 @@
 # <module name="sqlauth">
 # <module name="sqloper">
 # <module name="xline_db">
+# <module name="codepage"> 编码定义
 
 <module name="sasl">
 <module name="alltime">
@@ -422,7 +423,6 @@
           override="yes">
 <module name="nopartmsg">
 <module name="nationalchars">
-<module name="codepage">
 <module name="mlock">
 <module name="hostchange">
 <module name="hidemode">
