--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -225,7 +225,6 @@
 # <module name="sqlauth">
 # <module name="sqloper">
 # <module name="xline_db">
-# <module name="codepage"> 编码定义
 
 <module name="sasl">
 <module name="alltime">
@@ -423,6 +422,9 @@
           override="yes">
 <module name="nopartmsg">
 <module name="nationalchars">
+<module name="codepage">
+<codepage name="ASCII"
+          charset="ASCII">
 <module name="mlock">
 <module name="hostchange">
 <module name="hidemode">
