--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -421,10 +421,10 @@
 <operjoin channel="#OP_OP"
           override="yes">
 <module name="nopartmsg">
-<module name="nationalchars">
-<module name="codepage">
-<codepage name="ASCII"
-          charset="ASCII">
+#<module name="nationalchars">
+#<module name="codepage">
+#<codepage name="ASCII"
+#          charset="ASCII">
 <module name="mlock">
 <module name="hostchange">
 <module name="hidemode">
