--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -163,7 +163,7 @@
           hidesplits="no"
           hideulines="no"
           userstats="Pu"
-          maphide="https://arkfuture.cn">
+          maphide="https://arkfuture.cn/">
 
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
 #<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
@@ -335,7 +335,7 @@
 <helpmsg nohelp="您搜索的主题没有任何帮助。请再试一次。">
 <helpop key="help"
         title="帮助"
-        value="Please go to http://arkfuture.cn">
+        value="/MOTD">
 <module name="geoclass">
 <module name="exemptchanops">
 <module name="sslmodes">
@@ -394,7 +394,7 @@
 <module name="permchannels">
 <permchannels channel="#arkfuture"
               modes=""
-              topic="Welcome to ARKFUTURE|欢迎加入ARKFUTURE|这个是中转频道,默认自动加入|请访问http://arkfuture.cn"
+              topic="中转频道,默认加入|请阅读/MOTD获取常用频道列表"
               topicsetby="ARKFUTURE"
               topicts="1706788800"
               ts="1706788800">
