--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -347,8 +347,6 @@
 <module name="customprefix">
 <module name="conn_umodes">
 <module name="conn_join">
-<autojoin channel="#arkfuture"
-          delay="10s">
 <module name="cycle">
 <module name="globops">
 <module name="inviteexception">
@@ -394,7 +392,7 @@
 <module name="permchannels">
 <permchannels channel="#arkfuture"
               modes=""
-              topic="中转频道,默认加入|请阅读/MOTD获取常用频道列表"
+              topic="中转频道|请阅读/MOTD获取常用频道列表"
               topicsetby="ARKFUTURE"
               topicts="1706788800"
               ts="1706788800">
