--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,4 +1,4 @@
-# 配置文件迭代版本 [7.1]
+# 配置文件迭代版本 [7.3]
 # 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTUREirc使用
 # 
 # 您可以在以下文档中查询详细配置来完善此配置
@@ -163,7 +163,7 @@
           hidesplits="no"
           hideulines="no"
           userstats="Pu"
-          maphide="https://arkfuture.cn/">
+          maphide="https://arkfuture.cn/#IRC">
 
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
 #<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
