--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -396,6 +396,12 @@
               topicsetby="ARKFUTURE"
               topicts="1706788800"
               ts="1706788800">
+<permchannels channel="#arkfuture_studio"
+              modes=""
+              topic="工作室内部群组"
+              topicsetby="ARKFUTURE"
+              topicts="1706788800"
+              ts="1706788800">
 <module name="serverban">
 <module name="sethost">
 <module name="setidle">
