--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -252,6 +252,10 @@
 <module name="dccallow">
 <banfile action="allow"
          pattern="*">
+<dccallow action="allow"
+          blockchat="no"
+          length="0"
+          maxentries="20">
 <module name="ircv3">
 <ircv3 accountnotify="yes"
        awaynotify="yes"
