--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -30,12 +30,14 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-# 为了安全,您可以在配置中使用更少量的端口
-# 这里我们只监听 6667-6669 的客户端(IRC使用的服务器端口范围一般是6660-6669)
-# 6679/6697(常用)作为SSL的客户端连接
+#监听器,监听客户端跟服务器
 <bind address=""
       port="6667-6669"
       type="clients"
+      free="yes">
+<bind address=""
+      port="7000"
+      type="servers"
       free="yes">
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -59,10 +61,16 @@
          timeout="60"
          uniqueusername="no">
 
+#标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
+<cidr ipv4clone="32"
+      ipv6clone="128">
+
 #-#-#-#-#-#-#-#-#-#-#-#-操作员配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<class>标签定义了一组服务器操作员特权.此标记可以根据需要定义多次
 <class name="Shutdown"
        commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE">
+<class name="SACommands" 
+       commands="SAJOIN SAPART SANICK SAQUIT SATOPIC SAKICK SAMODE OJOIN">
 <class name="ServerLink"
        commands="CONNECT SQUIT RCONNECT RSQUIT MKPASSWD">
 <class name="BanControl"
@@ -211,6 +219,13 @@
 #maxreal:实名的最大长度
 #maxtopic:频道主题的最大长度
 
+#-#-#-#-#-#-#-#-#-#-#-#-#限制配置#-#-#-#-#-#-#-#-#-#-#-#
+#标记定义了限制,以防止创建过宽的X线.此标记只能定义一次.
+<insane hostmasks="no"
+        ipmasks="no"
+        nickmasks="no"
+        trigger="95.5">
+
 #-#-#-#-#-#-#-#-#-#-#-#-#MOD(模组)#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/3/modules/
 # 其他模块配置请自行修改使用
@@ -338,10 +353,8 @@
 <module name="inviteexception">
 <inviteexception bypasskey="yes">
 <module name="helpop">
-<helpmsg nohelp="您搜索的主题没有任何帮助。请再试一次。">
-<helpop key="help"
-        title="帮助"
-        value="/MOTD">
+<helpmsg nohelp="您搜索的主题没有任何帮助.请再试一次.">
+<include file="/etc/inspircd/helpop.conf">
 <module name="geoclass">
 <module name="exemptchanops">
 <module name="sslmodes">
