--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -1,5 +1,5 @@
 # 配置文件迭代版本 [13]
-# 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTUREirc使用
+# 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTURE-IRC使用
 # 
 # 您可以在以下文档中查询详细配置来完善此配置
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -17,7 +17,7 @@
 # network 的值应该在忘了上所有的服务器上都应该相同
 
 <server name=""
-        description="ARKFUTURE irc"
+        description="ARKFUTURE-IRC"
         network="ARKFUTURE"
         id="1AF">
 # ARKFUTURE irc id从1AF开始,依次往后推到9AF;0AF作为特别id
@@ -157,11 +157,11 @@
 #此配置参照(基于)官方文档修改,可自行修改
 <security allowcoreunload="no"
           announceinvites="dynamic"
-          customversion="ARKFUTURE-irc-v1"
+          customversion="ARKFUTURE-IRC(INSPIRCD)"
           genericoper="no"
           hidebans="yes"
           hidekills=""
-          hideserver="ARKFUTUREirc"
+          hideserver="ARKFUTURE-IRC"
           hideulinekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
@@ -353,7 +353,6 @@
 <module name="inviteexception">
 <inviteexception bypasskey="yes">
 <module name="helpop">
-<helpmsg nohelp="您搜索的主题没有任何帮助.请再试一次.">
 <include file="/etc/inspircd/helpop.conf">
 <module name="geoclass">
 <module name="exemptchanops">
@@ -411,7 +410,7 @@
 <module name="permchannels">
 <permchannels channel="#arkfuture"
               modes=""
-              topic="中转频道|请阅读/MOTD获取常用频道列表"
+              topic="中转频道|请阅读/MOTD公告|请查看/HELP帮助"
               topicsetby="ARKFUTURE"
               topicts="1706788800"
               ts="1706788800">
