--- a/ARKFUTURE/IRC/helpop.conf
+++ b/ARKFUTURE/IRC/helpop.conf
@@ -20,7 +20,7 @@
 这些详细的命令暂没有翻译成中文,若您有兴趣,请自行查询
 部分命令或模式无效,因为部分插件已经废弃
 我们尽可能把所有即时可用的模块插件都添加上,让您有更好的IRC体验
-欢迎您给我们提出意见
+欢迎您给我们提出意见/建议/修改配置 
 ">
 
 <helpop key="cuser" title="用户命令列表" value="
