--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -410,13 +410,13 @@
 <module name="permchannels">
 <permchannels channel="#arkfuture"
               modes=""
-              topic="中转频道|请阅读/MOTD公告|请查看/HELP帮助"
+              topic="中转频道|请阅读/MOTD公告|请查看/HELP帮助|请查看/RULES规则"
               topicsetby="ARKFUTURE"
               topicts="1706788800"
               ts="1706788800">
 <permchannels channel="#arkfuture_studio"
               modes=""
-              topic="工作室内部群组"
+              topic="工作室内部频道|请查看/HELP帮助|请查看/RULES规则"
               topicsetby="ARKFUTURE"
               topicts="1706788800"
               ts="1706788800">
