--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -395,6 +395,13 @@
 <module name="commonchans">
 <module name="conn_waitpong">
 <module name="connectban">
+<connectban threshold=""
+            banmessage="您的IP范围在太短的时间内尝试连接太多次。稍等片刻，您将能够连接."
+            banduration="15s"
+            ipv4cidr="32"
+            ipv6cidr="128"
+            bootwait="10s"
+            splitwait="10s">
 <module name="connflood">
 <module name="customtitle">
 <module name="denychans">
