--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -95,21 +95,9 @@
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
 # 这里必要的话请限制登录主机 "host" 字段
 # NetAdmin：服务器管理；GlobalOp：服务器操作员；Helper：帮助员
-<oper name="arkfutureadmin"
-      password="P03iZjRtmpqXPv3"
-      host="*@*"
-      type="NetAdmin"
-      vhost="iadm.arkfuture.cn">
-<oper name="arkfutureop"
-      password="P03iZjRtmpqXPv3"
-      host="*@*"
-      type="GlobalOp"
-      vhost="igop.arkfuture.cn">
-<oper name="arkfuturehelper"
-      password="P03iZjRtmpqXPv3"
-      host="*@*"
-      type="Helper"
-      vhost="ihep.arkfuture.cn">
+# 使用include来加载一个单独的操作员账户配置文件
+<include file="/etc/inspircd/opers.conf">
+
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
