--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -40,6 +40,7 @@
       type="servers"
       free="yes">
 
+
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
 #如果需要为私人的irc,可以设置密码,使用password字段
@@ -222,6 +223,7 @@
 # <module name="模块名">
 # 模块配置
 
+######禁用模块
 # <module name="globalload"> 管理员重载/卸载模块的模块,非必要不装
 # <module name="ldapauth">
 # <module name="ldapoper">
@@ -230,7 +232,11 @@
 # <module name="xline_db">
 # <module name="nationalchars"> 
 # <module name="codepage">
-
+######TLS/SSL模块(请看官网说明)
+#<module name="ssl_openssl">
+#<module name="ssl_gnutls">
+#<include file="/etc/inspircd/ssl.conf">
+######启用模块
 <module name="sasl">
 <module name="alltime">
 <module name="blockcolor">
