--- a/ARKFUTURE/IRC/inspircd.conf
+++ b/ARKFUTURE/IRC/inspircd.conf
@@ -97,7 +97,7 @@
 # 这里必要的话请限制登录主机 "host" 字段
 # NetAdmin：服务器管理；GlobalOp：服务器操作员；Helper：帮助员
 # 使用include来加载一个单独的操作员账户配置文件
-<include file="/etc/inspircd/opers.conf">
+<include file="/etc/inspircd/.opers.conf">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
@@ -232,10 +232,10 @@
 # <module name="xline_db">
 # <module name="nationalchars"> 
 # <module name="codepage">
-######TLS/SSL模块(请看官网说明)
+######TLS/SSL模块(请看官网说明,使用时需要自行删除#)
 #<module name="ssl_openssl">
 #<module name="ssl_gnutls">
-#<include file="/etc/inspircd/ssl.conf">
+#<include file="/etc/inspircd/.ssl.conf">
 ######启用模块
 <module name="sasl">
 <module name="alltime">
@@ -347,7 +347,7 @@
 <module name="inviteexception">
 <inviteexception bypasskey="yes">
 <module name="helpop">
-<include file="/etc/inspircd/helpop.conf">
+<include file="/etc/inspircd/.helpop.conf">
 <module name="geoclass">
 <module name="exemptchanops">
 <module name="sslmodes">
