--- a/ARKFUTURE/IRC/.ssl.conf
+++ b/ARKFUTURE/IRC/.ssl.conf
@@ -2,7 +2,7 @@
 <config format="xml">
 
 
-<openssl onrehash="yes">
+#启用TLS/SSL后相关的监听器
 <bind address=""
       port="6697"
       free="yes"
@@ -13,6 +13,11 @@
       free="yes"
       sslprofile="Servers"
       type="servers">
+
+#在 OPENSSL GNUTLS 两者中选一个,另一个请删除
+## OPENSSL
+<module name="ssl_openssl">
+<openssl onrehash="yes">
 <sslprofile name="Clients"
             provider="openssl"
             cafile="ca.pem"
@@ -30,3 +35,21 @@
             tlsv11="no"
             tlsv12="yes"
             tlsv13="yes">
+
+
+## GNUTLS
+<module name="ssl_gnutls">
+<gnutls onrehash="yes">
+<sslprofile name="Clients"
+            provider="gnutls"
+            cafile=""
+            certfile="cert.pem"
+            crlfile=""
+            dhfile="dhparams.pem"
+            hash="sha256"
+            keyfile="key.pem"
+            mindhbits="1024"
+            outrecsize="2048"
+            priority="NORMAL"
+            requestclientcert="yes"
+            strictpriority="no">
