--- a/ARKFUTURE/IRC/.ssl.conf
+++ b/ARKFUTURE/IRC/.ssl.conf
@@ -1,4 +1,4 @@
-#hssl<3> -- UTF-8 
+#hssl<4> -- UTF-8 
 <config format="xml">
 
 
@@ -20,36 +20,18 @@
 <openssl onrehash="yes">
 <sslprofile name="Clients"
             provider="openssl"
-            cafile="ca.pem"
-            certfile="cert.pem"
+            cafile="/etc/inspircd/.ca/ca.pem"
+            certfile="/etc/inspircd/.ca/cert.pem"
             crlfile=""
             ciphers="DEFAULT"
             compression="no"
-            dhfile="dhparams.pem"
+            dhfile="/etc/inspircd/.ca/dhparams.pem"
             ecdhcurve="prime256v1"
             hash="sha256"
-            keyfile="key.pem"
+            keyfile="/etc/inspircd/.ca/key.pem"
             renegotiation="no"
             requestclientcert="yes"
             tlsv1="no"
             tlsv11="no"
             tlsv12="yes"
             tlsv13="yes">
-
-
-## GNUTLS
-<module name="ssl_gnutls">
-<gnutls onrehash="yes">
-<sslprofile name="Clients"
-            provider="gnutls"
-            cafile=""
-            certfile="cert.pem"
-            crlfile=""
-            dhfile="dhparams.pem"
-            hash="sha256"
-            keyfile="key.pem"
-            mindhbits="1024"
-            outrecsize="2048"
-            priority="NORMAL"
-            requestclientcert="yes"
-            strictpriority="no">
